# secure-go-backend-clean-architecture

./: .gitignore  .pre-commit-config.yaml  .releaserc  BUILD.bazel  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  README.md  SECURITY.md  docker-compose.yaml  go.mod  go.sum  sonar-project.properties
.github/: renovate.json
.github/workflows/: build.yml  code-review.yml  codeql-analysis.yml  scorecard.yml
api/controller/: BUILD.bazel  helpers_test.go  login_controller_test.go  profile_controller_test.go  refresh_token_controller_test.go  signup_controller.go  signup_controller_test.go  task_controller.go  task_controller_test.go
api/middleware/: BUILD.bazel  jwt_auth_middleware_test.go
api/route/v1/: BUILD.bazel
bootstrap/: BUILD.bazel  database.go  env.go
cmd/: BUILD.bazel  main.go
domain/: BUILD.bazel  jwt_custom.go  task.go  user.go
domain/mocks/: BUILD.bazel
internal/fakeutil/: BUILD.bazel
internal/tokenutil/: BUILD.bazel  tokenutil.go  tokenutil_test.go
mongo/: BUILD.bazel  mongo.go
mongo/mocks/: BUILD.bazel  Client.go  Collection.go
repository/: BUILD.bazel  task_repository.go  task_repository_test.go  user_repository.go  user_repository_test.go
tests/e2e/: e2e_test.go
usecase/: BUILD.bazel  profile_usecase_test.go  task_usecase_test.go
