module(
    name = "secure_go_backend_clean_architecture",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_golang_jwt_jwt_v4",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "org_golang_x_crypto",
    "org_mongodb_go_mongo_driver_v2",
)
