load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "usecase",
    srcs = [
        "login_usecase.go",
        "profile_usecase.go",
        "refresh_token_usecase.go",
        "signup_usecase.go",
        "task_usecase.go",
    ],
    importpath = "github.com/amitshekhariitbhu/go-backend-clean-architecture/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//domain",
        "//internal/tokenutil",
    ],
)

go_test(
    name = "usecase_test",
    srcs = [
        "profile_usecase_test.go",
        "task_usecase_test.go",
    ],
    deps = [
        ":usecase",
        "//domain",
        "//domain/mocks",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@org_mongodb_go_mongo_driver_v2//bson",
    ],
)
