load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "login_controller.go",
        "profile_controller.go",
        "refresh_token_controller.go",
        "signup_controller.go",
        "task_controller.go",
    ],
    importpath = "github.com/amitshekhariitbhu/go-backend-clean-architecture/api/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//bootstrap",
        "//domain",
        "@com_github_gin_gonic_gin//:gin",
        "@org_golang_x_crypto//bcrypt",
        "@org_mongodb_go_mongo_driver_v2//bson",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "helpers_test.go",
        "login_controller_test.go",
        "profile_controller_test.go",
        "refresh_token_controller_test.go",
        "signup_controller_test.go",
        "task_controller_test.go",
    ],
    deps = [
        ":controller",
        "//bootstrap",
        "//domain",
        "//domain/mocks",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@org_golang_x_crypto//bcrypt",
        "@org_mongodb_go_mongo_driver_v2//bson",
    ],
)
