load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "Client.go",
        "Collection.go",
        "Cursor.go",
        "Database.go",
        "SingleResult.go",
    ],
    importpath = "github.com/amitshekhariitbhu/go-backend-clean-architecture/mongo/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//mongo",
        "@com_github_stretchr_testify//mock",
        "@org_mongodb_go_mongo_driver_v2//mongo",
        "@org_mongodb_go_mongo_driver_v2//mongo/options",
    ],
)
